syntax = "proto3";

package euc_backend;
import "google/protobuf/timestamp.proto";


message GetAuthConditionRequest {
  optional int32 id = 1;
  optional int32 user_id = 2;
  optional string ip_address = 3;
  optional string auth_token = 4;
  optional string session_id =5;
  optional string user_agent =6;
  optional string platform =7;
  optional int32 longtitude =8;
  optional int32 latitude =9;
  optional bool is_extra = 10;
  optional google.protobuf.Timestamp from_date =11;
  optional google.protobuf.Timestamp to_date =12;

}

message CreateAuthRequest {
  optional string ip_address = 2;
  optional string auth_token = 3;
  optional string session_id =4;
  optional string user_agent =5;
  optional string platform =6;
  optional int32 longtitude =7;
  optional int32 latitude =8;
}

message LoginRequest {
  string username =1;
  string password =2;
  CreateAuthRequest data =3;
}
