syntax = "proto3";
package euc_backend;


import "paymentSession/paymentSession.proto";

message PaymentSessionReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional PaymentSession payload = 4;
}

message PaymentSessionListDataReply {
  repeated PaymentSession payment_session_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message PaymentSessionListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  PaymentSessionListDataReply payload = 4;
}
