syntax = "proto3";
package euc_backend;

import "google/protobuf/timestamp.proto";
import "enumps.proto";

message GetPaymentSessionConditionRequest {
  optional int32 id = 1;
  optional string title = 2;
  optional string description = 3;
  optional EnumProto.SessionStatus status = 4;
  optional google.protobuf.Timestamp from_date_confirm = 5;
  optional google.protobuf.Timestamp to_date_confirm = 6;
  optional google.protobuf.Timestamp from_date_done = 7;
  optional google.protobuf.Timestamp to_date_done = 8;
  // google.protobuf.Timestamp created_at = 7;
  // google.protobuf.Timestamp updated_at = 8;
  // optional google.protobuf.Timestamp deleted_at = 9;
  optional int32 page =10;
  optional int32 limit =11;
  optional bool is_deleted =13;
  optional bool is_extra_user_confirm =15;
  optional bool is_extra_user_done =16;
  optional bool is_extra_event =17;
  optional bool is_extra_payment =18;
  optional bool is_extra_club =19;
  optional int32 club_id = 20;
}

message CreatePaymentSessionRequest {
  string title = 1;
  optional string description = 2;
  // EnumProto.SessionStatus status = 3;
  optional int32 event_id = 4;
}

message UpdatePaymentSessionDataRequest {
  optional string title = 1;
  optional string description = 2;
  optional EnumProto.SessionStatus status = 3;
  optional int32 fund_amount = 17;
  optional int32 amount = 18;
}

message UpdatePaymentSessionRequest {
  GetPaymentSessionConditionRequest conditions =1;
  UpdatePaymentSessionDataRequest data =2;
}

message RemovePaymentSessionRequest {
  int32 id = 1;
}

message ConfirmPaymentSessionRequest {
  int32 id = 1;
}

message DonePaymentSessionRequest {
  int32 id = 1;
}
