syntax = "proto3";

package euc_backend;
import "enumps.proto";
import "google/protobuf/timestamp.proto";


message Receipt {
  int32 id = 1;
  string title = 2;
  optional string description = 3;
  int32 amount = 4;
  EnumProto.MoneyMethod method = 5;
  ReceiptSession receipt_session = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  optional google.protobuf.Timestamp deleted_at = 9;
  int32 fund_amount = 10;

  message ReceiptSession {
    int32 id = 1;
    string title = 2;
    optional string description = 3;
    EnumProto.SessionStatus status = 6;
    optional google.protobuf.Timestamp date_confirm = 7;
    optional google.protobuf.Timestamp date_done = 9;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
    optional google.protobuf.Timestamp deleted_at = 13;
    Club club = 16;
    int32 fund_amount = 17;
    int32 amount = 18;
  
    message Club {
      int32 id = 1;
      string name = 2;
      optional string abbreviation = 3;
      optional int32 fund =4;
      int32 total_member = 5;
      int32 total_guest = 6;
      google.protobuf.Timestamp created_at = 7;
      google.protobuf.Timestamp updated_at = 8;
      optional google.protobuf.Timestamp deleted_at = 9;
    }
  }
}