syntax = "proto3";
package euc_backend;


import "user/user.proto";

message UserReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional User payload = 4;
  optional UserExtraData extra_data =5;
}

message UserListDataReply {
  repeated User user_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message UserListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  UserListDataReply payload = 4;
  optional UserExtraData extra_data =5;
}

message UserExtraData {

}
